<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_choose_level"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/choose_level"
        android:textAllCaps="true"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_test_level"
        style="@style/SelectLevelButtonStyle"
        android:backgroundTint="@color/test_level_color"
        android:layout_marginTop="80dp"
        android:text="@string/level_test"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_level" />

    <Button
        android:id="@+id/btn_easy_level"
        style="@style/SelectLevelButtonStyle"
        android:backgroundTint="@color/easy_level_color"
        android:text="@string/level_easy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_test_level" />

    <Button
        android:id="@+id/btn_normal_level"
        style="@style/SelectLevelButtonStyle"
        android:backgroundTint="@color/normal_level_color"
        android:text="@string/level_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_easy_level" />

    <Button
        android:id="@+id/btn_hard_level"
        style="@style/SelectLevelButtonStyle"
        android:backgroundTint="@color/hard_level_color"
        android:text="@string/level_hard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_normal_level" />

</androidx.constraintlayout.widget.ConstraintLayout>